<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/iv_slyterin"
        android:layout_width="219dp"
        android:layout_height="209dp"
        android:layout_marginTop="78dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/slytherin" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/nadhifa_ashlahani"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_slyterin" />

    <Button
        android:id="@+id/btn_fav"
        android:layout_width="253dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:background="@color/colorPurple"
        android:text="@string/my_favortie"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <Button
        android:id="@+id/btn_like"
        android:layout_width="244dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPurple"
        android:text="@string/like"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_fav" />

    <Button
        android:id="@+id/btn_offline"
        android:layout_width="241dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPurple"
        android:text="@string/offline"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_like" />

    <Button
        android:id="@+id/btn_information"
        android:layout_width="232dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPurple"
        android:text="@string/information"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_offline" />

    <Button
        android:id="@+id/btn_log_out"
        android:layout_width="234dp"
        android:layout_height="54dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorPurple"
        android:text="@string/log_out"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_information" />
</androidx.constraintlayout.widget.ConstraintLayout>